sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:6: error: not found: value i
    temp = getValeur(i)
                     ^