sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.code
def shellSort() {
  var temp = 0
  var ecart=getNombreValeurs()/2
  while(ecart>0) {
    temp = getValeur(i)
    var j=1
    while((j>0&&getValeur(j-ecart)>temp)){
      setValeur(j,getValeur(j-ecart))
      j=j-ecart
      ecart=ecart/2
    }
    setValeur(j,temp)
  }
}
